package Servicio_notificaciones.dominio;

public enum EstadoNotificacion {
  PENDENTE,
  ENVIADA,
  FALLIDA
}
