package Servicio_notificaciones.dominio;

public enum MedioNotificacion {
  EMAIL,
  SMS,
  WHATSAPP
}
